# blackbox_ai_nix

./: .gitignore  LICENSE  MANIFEST.in  README.md  default.nix  pyproject.toml  requirements.txt  setup.py  shell.nix
blackbox_ai/: __init__.py  chat_service.py  config.py  hotkey_listener.py  main.py  utils.py
blackbox_ai/ui/: main_window.py  style.css
